tests/ui/moves/move-into-dead-array-1.stderr
error[E0381]: used binding `a` isn't initialized
  --> $DIR/move-into-dead-array-1.rs:14:5
   |
LL |     let mut a: [D; 4];
   |         ----- binding declared here but left uninitialized
LL |     a[i] = d();
   |     ^^^^ `a` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let mut a: [D; 4] = /* value */;
   |                       +++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
